--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
   firebase_core: ^3.13.1
   flutter:
     sdk: flutter
+  flutter_qiblah: ^3.1.0+1
+  flutter_svg: ^2.1.0
+  geolocator: ^13.0.2
+  google_maps_flutter: ^2.12.2
   http: ^1.4.0
   social_login_buttons: ^1.0.7
 
