--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^5.6.8
   cupertino_icons: ^1.0.8
+  firebase_auth: ^5.5.4
   firebase_core: ^3.13.1
   flutter:
     sdk: flutter
@@ -36,6 +38,7 @@ dependencies:
   flutter_svg: ^2.1.0
   geolocator: ^13.0.2
   google_maps_flutter: ^2.12.2
+  google_sign_in: ^6.3.0
   http: ^1.4.0
   social_login_buttons: ^1.0.7
 
