--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,11 @@ dependencies:
   flutter_qiblah: ^3.1.0+1
   flutter_svg: ^2.1.0
   geolocator: ^13.0.2
+  google_fonts: ^6.2.1
   google_maps_flutter: ^2.12.2
   google_sign_in: ^6.3.0
   http: ^1.4.0
+  share_plus: ^10.1.4
   social_login_buttons: ^1.0.7
 
 dev_dependencies:
