--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   social_login_buttons: ^1.0.7
   provider: ^6.1.5
   shared_preferences: ^2.5.3
+  intl: ^0.20.2
+  geocoding: ^4.0.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
