--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   shared_preferences: ^2.5.3
   intl: ^0.20.2
   geocoding: ^4.0.0
+  hijri: ^3.0.0
+  
 
 dev_dependencies:
   flutter_lints: ^5.0.0
